# color-tracker-genom3

./: .gitignore  CT_drone-genom3-uninstalled.pc.in  CT_drone-genom3.pc.in  ColorTrack.idl  ColorTracker-genom3-uninstalled.pc.in  ColorTracker-genom3.pc.in  ColorTracker.gen  Environment.idl  Makefile.am  README.adoc  configure.ac
codels/: CT_drone_codels.c  CT_drone_track_codels.c  ColorTracker_codels.c  ColorTracker_codels.cc  ColorTracker_track_codels.c  ColorTracker_track_codels.cc  Makefile.am  tracking.hpp
examples/: python.py
